[gd_scene load_steps=2 format=3 uid="uid://38814fyoutfq"]

[ext_resource type="Script" path="res://scenes/UI/pause/PauseMenu.gd" id="1_n67k2"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n67k2")
metadata/_edit_use_anchors_ = true

[node name="PauseContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.0607639
anchor_bottom = 0.155864
offset_right = -1.52588e-05
offset_bottom = 0.0001297
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="InputRemap" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Quit" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="PauseContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/InputRemap" to="." method="_on_input_remap_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
